turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:31: error: constructor cannot be instantiated to expected type;
 found   : (T1, T2, T3)
 required: Array[Int]
			case (_,0,_) => state = rule(state)(i)(2)
                             ^Turmite:33: error: constructor cannot be instantiated to expected type;
 found   : (T1, T2, T3)
 required: Array[Int]
			case (_,1,_) => state = rule(state)(i)(2)
                             ^Turmite:36: error: constructor cannot be instantiated to expected type;
 found   : (T1, T2, T3)
 required: Array[Int]
			case (_,2,_) => state = rule(state)(i)(2)
                             ^Turmite:40: error: constructor cannot be instantiated to expected type;
 found   : (T1, T2, T3)
 required: Array[Int]
			case (_,4,_) => state = rule(state)(i)(2)
                             ^Turmite:45: error: constructor cannot be instantiated to expected type;
 found   : (T1, T2, T3)
 required: Array[Int]
			case (_,8,_) => state = rule(state)(i)(2)
                             ^